Fix footer with on IE9

--- a/stylesheets/sass/_footer.scss
+++ b/stylesheets/sass/_footer.scss
@@ -17,6 +17,7 @@
 
     .no-flexbox & {
       display: table;
+      width: 100%;
     }
 
     .flexbox & {
